# db-r

./: .gitignore  AUTH_UNIFIED_STORY.md  BM25_OPTIMIZATION_PROPOSAL.md  CLAUDE.md  CLI_SERVER_PLAN.md  Cargo.toml  FORWARD_DICT_PACKING_STRATEGY.md  GEOSPATIAL_INDEX_PROPOSAL.md  INCREMENTAL_INDEXING_STRATEGY.md  LATE_MATERIALIZATION_DESIGN.md  Makefile  QUERY_CONNECTION_NAMED_GRAPHS_HANDOFF.md  RDF_STAR_PLAN.md  README.md  TXN_META_INGESTION_SPEC.md  VECTOR_SCALING_GUIDE.md  sonar-project.properties
bench-dict-bihash/: Cargo.toml
bench-dict-bihash/src/: main.rs
bench-filter-query/: Cargo.toml
bench-filter-query/src/: main.rs
benchmarks/fluree-bench/: Cargo.toml
benchmarks/fluree-bench/scripts/: bench-otel.sh
benchmarks/fluree-bench/src/: main.rs  setup.rs
examples/bulk-turtle-import/: Cargo.toml  README.md  TODO.md
examples/bulk-turtle-import/src/: main.rs
examples/otel-firehose-demo/: Cargo.toml  README.md  run.sh
examples/otel-firehose-demo/src/: batch_reader.rs  main.rs
fluree-db-cli/: Cargo.toml
fluree-db-cli/src/: cli.rs  config.rs  context.rs  detect.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  remote_client.rs
fluree-db-cli/src/commands/: auth.rs  branch.rs  branches.rs  commit_upgrade.rs  config_cmd.rs  context_cmd.rs  create.rs  drop.rs  export.rs  history.rs  iceberg.rs  index.rs  info.rs  init.rs  insert.rs  list.rs  log.rs  mcp_serve.rs  memory.rs  mod.rs  prefix.rs  query.rs  remote.rs  server.rs  show.rs  sync.rs  token.rs  track.rs  transact.rs  update.rs  upsert.rs  upstream.rs  use_cmd.rs
fluree-db-cli/tests/: integration.rs
fluree-db-core/: Cargo.toml
fluree-db-core/src/: address.rs  address_path.rs  alias.rs  cache.rs  coerce.rs  commit.rs  comparator.rs  content_id.rs  content_kind.rs  db.rs  dict_novelty.rs  error.rs  flake.rs  geo.rs  graph_db_ref.rs  graph_registry.rs  ids.rs  index.rs  index_stats.rs  ledger_config.rs  ledger_id.rs  lib.rs  namespaces.rs  ns_encoding.rs  ns_vec_bi_dict.rs  o_type.rs  o_type_registry.rs  overlay.rs  pack.rs  prefetch.rs  prefix_trie.rs  query_bounds.rs  range.rs  range_provider.rs  schema_hierarchy.rs  sid.rs  sid64.rs  stats_view.rs  stats_wire.rs  storage.rs  (+6 more)
fluree-db-core/src/commit/: codec.rs
fluree-db-core/src/commit_v2/: envelope.rs  mod.rs  op_codec.rs  raw_reader.rs  varint.rs
fluree-db-core/src/serde/: flakes_transport.rs  json.rs  mod.rs
fluree-db-core/src/storage/: file.rs  memory.rs
fluree-db-core/tests/: util_bytes.rs  util_json_dict.rs
fluree-db-indexer/: Cargo.toml
fluree-db-indexer/src/: builder.rs  config.rs  drop.rs  error.rs  fulltext_hook.rs  hll.rs  lib.rs  namespace.rs  node.rs  orchestrator.rs  spatial_hook.rs  stats.rs  writer.rs
fluree-db-indexer/src/dict_tree/: branch.rs  builder.rs  forward_leaf.rs  forward_pack.rs  incremental.rs  mod.rs  pack_builder.rs  pack_reader.rs  reader.rs  reverse_leaf.rs  varint.rs
fluree-db-indexer/src/gc/: collector.rs  mod.rs  record.rs
fluree-db-indexer/src/refresh/: merge.rs  mod.rs  novelty_slice.rs  resolver.rs  seek.rs  split.rs  traversal.rs
fluree-db-indexer/src/run_index/: batched_lookup.rs  binary_cursor.rs  binary_index_store.rs  branch.rs  chunk_dict.rs  dict_io.rs  dict_merge.rs  global_dict.rs  incremental_branch.rs  incremental_leaf.rs  (+30 more)
fluree-db-indexer/tests/: hll_test.rs  it_incremental_indexing_strategy.rs  multi_pass_reindex_test.rs  novelty_test.rs  refresh_e2e_test.rs  stats_serializer_test.rs
fluree-db-ingest/: Cargo.toml
fluree-db-ingest/src/: main.rs
fluree-db-ledger/: Cargo.toml
fluree-db-ledger/src/: error.rs  historical.rs  lib.rs  staged.rs
fluree-db-ledger/tests/: it_dict_novelty_apply_loaded_db.rs
fluree-db-memory/: Cargo.toml
fluree-db-memory/rules/: fluree_rules.md
fluree-db-memory/src/: branch.rs  error.rs  file_sync.rs  format.rs  lib.rs  mcp.rs  recall.rs  schema.rs  store.rs  turtle_io.rs  types.rs  vocab.rs
fluree-db-nameservice/: Cargo.toml
fluree-db-nameservice/src/: error.rs  file.rs  ledger_config.rs  lib.rs  memory.rs  notifying.rs  ns_format.rs  storage_ns.rs  storage_traits.rs  tracking.rs  tracking_file.rs
fluree-db-novelty/: Cargo.toml
fluree-db-novelty/src/: commit.rs  commit_flakes.rs  error.rs  lib.rs  runtime_stats.rs  stats.rs
fluree-db-policy/: Cargo.toml
fluree-db-policy/src/: class_lookup.rs  evaluate.rs  index.rs  lib.rs  query_eval.rs  schema.rs  types.rs
fluree-db-query/: Cargo.toml
fluree-db-query/benches/: vector_math.rs
fluree-db-query/src/: aggregate.rs  binary_range.rs  binary_range_v3.rs  binary_scan.rs  binary_scan_v3.rs  bind.rs  binding.rs  context.rs  count_plan.rs  count_plan_exec.rs  count_rows.rs  datalog_rules.rs  dataset.rs  dataset_operator.rs  dict_overlay.rs  distinct.rs  error.rs  execute.rs  exists.rs  explain.rs  expression.rs  fast_chain_exists_count_all.rs  fast_chain_join_count_all.rs  fast_chain_minus_count_all.rs  fast_count.rs  fast_count_blank_nodes.rs  fast_count_distinct_object.rs  fast_count_distinct_objects.rs  fast_count_distinct_predicates.rs  fast_count_distinct_subjects.rs  fast_count_literals.rs  fast_count_rows.rs  fast_count_triples.rs  fast_exists_count_all.rs  fast_exists_join_count_all.rs  fast_exists_join_count_distinct_object.rs  fast_exists_star_join_count_all.rs  fast_fused_scan_sum.rs  fast_group_by_object_star_topk.rs  fast_group_count_firsts.rs  (+65 more)
fluree-db-query/tests/: README-parity.md  correctness_tests.rs  datatype_coercion.rs  groupby_aggregate_tests.rs  owl2rl_property_rules_integration_tests.rs  tracing_test_utils.rs  values_bind_union_tests.rs
fluree-db-transact/: Cargo.toml
fluree-db-transact/src/: address.rs  commit.rs  commit_flakes.rs  error.rs  flake_sink.rs  import.rs  import_sink.rs  ir.rs  lib.rs  lower_sparql_update.rs  namespace.rs  stage.rs  turtle_splitter.rs  value_convert.rs
testsuite-sparql/: .gitignore  Cargo.toml  Makefile
testsuite-sparql/src/: evaluator.rs  files.rs  lib.rs  manifest.rs  query_handler.rs  rdfxml.rs  report.rs  result_comparison.rs  result_format.rs  sparql_handlers.rs  vocab.rs
testsuite-sparql/tests/: w3c_sparql.rs
(+928 files in other folders)
