[package]
name = "bench-dict-bihash"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench-dict"
path = "src/main.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }

# Real struct dependencies for baseline benchmarks
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-indexer = { path = "../fluree-db-indexer" }
