[package]
name = "fluree-db-cli"
description = "Command-line interface for Fluree DB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fluree"
path = "src/main.rs"

[dependencies]
fluree-db-api = { path = "../fluree-db-api" }
fluree-db-novelty = { path = "../fluree-db-novelty" }
fluree-db-nameservice = { path = "../fluree-db-nameservice" }
fluree-db-core = { path = "../fluree-db-core" }

clap = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

toml = "0.8"
toml_edit = "0.22"
dirs = "5"
comfy-table = "7"
colored = "2"
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
