[package]
name = "fluree-db-cli"
description = "Command-line interface for Fluree DB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fluree"
path = "src/main.rs"

[dependencies]
fluree-db-api = { path = "../fluree-db-api" }
fluree-db-novelty = { path = "../fluree-db-novelty" }
fluree-db-nameservice = { path = "../fluree-db-nameservice" }
fluree-db-core = { path = "../fluree-db-core" }
fluree-vocab = { path = "../fluree-vocab" }
fluree-db-query = { path = "../fluree-db-query" }
fluree-db-indexer = { path = "../fluree-db-indexer" }

clap = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

toml = "0.8"
toml_edit = "0.22"
comfy-table = "7"
colored = "2"
clap_complete = "4"
indicatif = "0.17"
tracing-subscriber = { workspace = true }

# Token command dependencies
fluree-db-credential = { path = "../fluree-db-credential" }
base64 = "0.22"
bs58 = "0.5"
shellexpand = "3"
hex.workspace = true
rand.workspace = true
sha2.workspace = true

# Remote ledger client (track mode) + OIDC discovery/exchange
reqwest = { workspace = true }
urlencoding = { workspace = true }
open = "5"

# Sync command dependencies
fluree-db-nameservice-sync = { path = "../fluree-db-nameservice-sync" }
async-trait.workspace = true
parking_lot = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
