[package]
name = "fluree-db-indexer"
description = "Index building for Fluree DB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["hll-stats"]
# Enable the embedded orchestrator (post-commit indexing helpers)
embedded-orchestrator = ["dep:fluree-db-ledger"]
# Enable HLL-based property statistics (NDV estimation)
# Uses our own minimal HllSketch256 implementation (no external HLL crate needed)
hll-stats = ["fluree-db-core/hll-stats"]
# Enable run-based index generation from commit-v2 blobs
commit-v2 = ["fluree-db-novelty/commit-v2", "fluree-db-core/native", "dep:rustc-hash", "dep:xxhash-rust", "dep:zstd", "dep:memmap2", "dep:chrono", "dep:moka"]

[dependencies]
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-novelty = { path = "../fluree-db-novelty" }
fluree-vocab = { path = "../fluree-vocab" }
fluree-db-nameservice = { path = "../fluree-db-nameservice" }
fluree-db-ledger = { path = "../fluree-db-ledger", optional = true }

# Core dependencies
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

# For content addressing
sha2.workspace = true
hex.workspace = true

# Observability
tracing.workspace = true

# Run-index dependencies (optional, for commit-v2 feature)
rustc-hash = { version = "2", optional = true }
xxhash-rust = { workspace = true, features = ["xxh3"], optional = true }
zstd = { workspace = true, optional = true }
memmap2 = { version = "0.9", optional = true }
chrono = { workspace = true, optional = true }
moka = { workspace = true, optional = true }

[dev-dependencies]
# For HLL tests (proper hash distribution)
xxhash-rust.workspace = true
