[package]
name = "fluree-db-ingest"
description = "Bulk TTL ingestion tool for Fluree DB"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluree-ingest"
path = "src/main.rs"

[features]
# Binary commit format v2 (compact binary instead of JSON)
commit-v2 = ["fluree-db-api/commit-v2", "dep:fluree-db-core", "dep:fluree-db-transact", "dep:fluree-db-indexer", "dep:fluree-db-query", "dep:fluree-db-sparql", "fluree-db-query/binary-index"]
# Optional OpenTelemetry span export (OTLP) for profiling.
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dependencies]
fluree-db-api = { path = "../fluree-db-api", features = ["native"] }
fluree-db-core = { path = "../fluree-db-core", optional = true }
fluree-db-transact = { path = "../fluree-db-transact", features = ["commit-v2"], optional = true }
fluree-db-indexer = { path = "../fluree-db-indexer", features = ["commit-v2", "hll-stats"], optional = true }
fluree-db-query = { path = "../fluree-db-query", features = ["binary-index"], optional = true }
fluree-db-sparql = { path = "../fluree-db-sparql", features = ["lowering"], optional = true }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mimalloc.workspace = true

# OpenTelemetry (optional; enable with `--features otel`)
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["grpc-tonic", "http-proto"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
