[package]
name = "fluree-db-ingest"
description = "Bulk TTL ingestion tool for Fluree DB"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluree-ingest"
path = "src/main.rs"

[features]
# Optional OpenTelemetry span export (OTLP) for profiling.
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dependencies]
fluree-db-api = { path = "../fluree-db-api", features = ["native"] }
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-transact = { path = "../fluree-db-transact", features = ["import"] }
fluree-db-indexer = { path = "../fluree-db-indexer" }
fluree-db-query = { path = "../fluree-db-query" }
fluree-db-sparql = { path = "../fluree-db-sparql", features = ["lowering"] }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mimalloc.workspace = true

# OpenTelemetry (optional; enable with `--features otel`)
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["grpc-tonic", "http-proto"] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
