[package]
name = "fluree-db-memory"
description = "Developer memory layer for Fluree DB — stores facts, decisions, constraints as RDF triples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native"]
native = ["fluree-db-api/native"]
mcp = ["dep:rmcp", "dep:schemars"]

[dependencies]
fluree-db-api = { path = "../fluree-db-api", default-features = false }
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-nameservice = { path = "../fluree-db-nameservice", default-features = false }

chrono.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true

# MCP support (optional)
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
