[package]
name = "fluree-db-nameservice"
version = "0.1.0"
edition = "2021"
description = "Nameservice traits and implementations for Fluree DB"
license = "Apache-2.0"

[features]
default = ["native"]
native = ["tokio/fs", "libc"]

[dependencies]
fluree-db-core = { path = "../fluree-db-core", default-features = false }
fluree-vocab = { path = "../fluree-vocab" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }
parking_lot = "0.12"
libc = { version = "0.2", optional = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tempfile = "3.19"
