[package]
name = "fluree-db-novelty"
version = "0.1.0"
edition = "2021"
description = "Novelty overlay and commit types for Fluree DB"
license = "Apache-2.0"

[dependencies]
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-credential = { path = "../fluree-db-credential" }
fluree-vocab = { path = "../fluree-vocab" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rayon = "1.10"
tracing = { workspace = true }
rustc-hash = "2"

# Numeric types for typed literal coercion
bigdecimal = "0.4"
num-bigint = "0.4"

# Content addressing (hash verification + hex encoding)
sha2 = { workspace = true }
hex.workspace = true

# Compression (binary commit format)
zstd = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
