[package]
name = "fluree-db-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query execution engine for Fluree DB"

[dependencies]
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-tabular = { path = "../fluree-db-tabular" }
fluree-db-policy = { path = "../fluree-db-policy" }
fluree-db-r2rml = { path = "../fluree-db-r2rml" }
fluree-db-reasoner = { path = "../fluree-db-reasoner" }
fluree-search-protocol = { path = "../fluree-search-protocol" }
fluree-vocab = { path = "../fluree-vocab" }
fluree-graph-json-ld = { path = "../fluree-graph-json-ld" }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
chrono.workspace = true
# Numeric types for filter comparison
num-bigint = "0.4"
num-traits = "0.2"
bigdecimal = "0.4"
# BM25 text analysis
rust-stemmers = "1.2"
once_cell = "1"
# BM25 index serialization
postcard = { version = "1", features = ["alloc"] }
# Hash functions
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Random number generation
rand = { workspace = true }
# URL encoding
percent-encoding = "2"
# Async runtime - needed for block_in_place in policy evaluation
tokio = { workspace = true }
# Embedded vector search (HNSW approximate nearest neighbor)
usearch = { version = "2.16", optional = true }

[features]
# Enable native storage backends in dependencies (used by ignored integration tests that
# load the on-disk test database).
native = ["fluree-db-core/native"]
# Enable embedded vector search (HNSW-based approximate nearest neighbor)
vector = ["dep:usearch"]

[dev-dependencies]
# tokio is now a regular dependency
