[package]
name = "fluree-db-transact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transaction support for Fluree DB"

[dependencies]
fluree-db-core = { path = "../fluree-db-core" }
fluree-db-policy = { path = "../fluree-db-policy" }
fluree-db-query = { path = "../fluree-db-query" }
fluree-db-sparql = { path = "../fluree-db-sparql" }
fluree-db-novelty = { path = "../fluree-db-novelty" }
fluree-db-ledger = { path = "../fluree-db-ledger" }
fluree-db-nameservice = { path = "../fluree-db-nameservice" }
fluree-db-shacl = { path = "../fluree-db-shacl", optional = true }
fluree-vocab = { path = "../fluree-vocab" }
fluree-graph-json-ld = { path = "../fluree-graph-json-ld" }
fluree-graph-ir = { path = "../fluree-graph-ir" }

# Workspace dependencies
async-trait.workspace = true
futures.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Content addressing
postcard.workspace = true
sha2.workspace = true
hex.workspace = true

# Unique ID generation
ulid.workspace = true

# Timestamps
chrono.workspace = true

# Numeric types for typed literal coercion
bigdecimal = "0.4"
num-bigint = "0.4"

# Compression (optional, for commit-v2 binary format)
zstd = { workspace = true, optional = true }

# Tempfile for streaming commit writer spool
tempfile = { version = "3", optional = true }

# Turtle parser (optional, for import mode)
fluree-graph-turtle = { path = "../fluree-graph-turtle", optional = true }

[features]
default = []
shacl = ["dep:fluree-db-shacl"]
commit-v2 = ["dep:zstd", "dep:tempfile", "dep:fluree-graph-turtle", "fluree-db-novelty/commit-v2"]

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = { workspace = true }
