[package]
name = "fluree-bench"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["commit-v2"]
commit-v2 = ["fluree-db-api/commit-v2", "fluree-db-transact/commit-v2"]
bench-otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
fluree-db-api = { path = "../../fluree-db-api" }
fluree-db-transact = { path = "../../fluree-db-transact" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

# OTEL (optional, behind bench-otel feature)
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }
