[package]
name = "bulk-turtle-import"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
fluree-db-api = { path = "../../fluree-db-api" }
fluree-graph-turtle = { path = "../../fluree-graph-turtle" }
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
