[package]
name = "otel-firehose-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
fluree-graph-turtle = { path = "../../fluree-graph-turtle" }
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { workspace = true, features = ["json"] }
